Mejoras encontradas mediante findbugs